--- a/src/main/resources/vietphap/gui/helloView.fxml
+++ b/src/main/resources/vietphap/gui/helloView.fxml
@@ -1,26 +1,32 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="474.0" prefWidth="847.0" style="-fx-background-color: #B6EADA;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="vietphap.gui.SceneController">
+<Pane prefHeight="454.0" prefWidth="836.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="vietphap.gui.SceneController">
    <children>
-      <HBox layoutY="123.0" prefHeight="0.0" prefWidth="874.0">
-         <children>
-            <HBox prefHeight="32.0" prefWidth="367.0" />
-            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="WELCOME" wrappingWidth="125.8499755859375" HBox.hgrow="ALWAYS">
-               <font>
-                  <Font size="24.0" />
-               </font>
-            </Text>
-         </children>
-      </HBox>
-      <HBox layoutX="-8.0" layoutY="-4.0" prefHeight="482.0" prefWidth="858.0">
-         <children>
-            <Button mnemonicParsing="false" onAction="#switchTomainMenu" opacity="0.0" prefHeight="604.0" prefWidth="930.0" text="Button" />
-         </children></HBox>
+      <ImageView fx:id="imView" fitHeight="472.0" fitWidth="847.0" layoutY="-6.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="https://drive.google.com/file/d/1Ee4hsE7Ulpf1ZSQYMorPOw2pctAlSn7s/view?usp=share_link" />
+         </image>
+      </ImageView>
+      <ImageView fitHeight="174.0" fitWidth="152.0" layoutX="9.0" layoutY="9.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../../../../image/Logo_Hust.png" />
+         </image></ImageView>
+      <Button layoutX="336.0" layoutY="383.0" mnemonicParsing="false" onAction="#switchTomainMenu" prefHeight="11.0" prefWidth="164.0" text="START">
+         <font>
+            <Font name="Javanese Text" size="12.0" />
+         </font>
+      </Button>
+      <Text fill="WHITE" layoutX="265.0" layoutY="32.0" stroke="#6e2c2c" strokeType="OUTSIDE" strokeWidth="0.0" text="HISTORICAL DOCUMENTS SEARCH ENGINE" wrappingWidth="311.8517761230469">
+         <font>
+            <Font name="Javanese Text" size="14.0" />
+         </font>
+      </Text>
    </children>
-</AnchorPane>
+</Pane>
